# Vulcan

./: .env.example  .gitignore  AGENTS.md  LICENSE copy  README.md  README_CN.md  install.sh  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  pyproject.toml  reconstruction_plan.md  requirements_backend.txt  vddata_sample_gadget_vectors.pkl  vulcan.yaml
configs/: coca_explain_keyword_demo.yaml  trvd_explain_model.yaml  trvd_test.yaml  vddata_smoke.yaml
dataCollection/tools/nvd/: README.md  cli.py  collect.sh  download.sh  filter_data_by_source.sh  utils.py
dataCollection/tools/osv/: filter_data_by_source.sh  generate_data.sh  utils.py
dataCollection/tools/research/: README.md  download.sh  filter_sap.sh
docs/: architecture.md  readme.md  testing_commit_coverage_report.md  usage.md
framework/: __init__.py  dataset.py  losses.py  model.py  optimizers.py  preprocess.py  pretrained.py
framework/datasets/: CodeXGLUE.py  XFGDataset_build.py  __init__.py  devign_partial.py  linevul.py  vdet_data.py
framework/datasets/IVDetect/: IVDetectDataset.py  IVDetectDataset_build.py
framework/datasets/XFGDataset_utils/: vocabulary.py
framework/datasets/vddata_utils/: clean_gadget.py  vectorize_gadget.py
framework/errors/: __init__.py  dataset_errors.py  download_errors.py
framework/models/: CodeXGLUE_baseline.py  Concoction.py  Russell_et_net.py  VulBERTa_CNN.py  VulBG.py  VulDeePecker.py  __init__.py  mvdetection.py
framework/representations/: __init__.py  ast_graphs.py  common.py  llvm_seq_test.py  syntax_seq.py
framework/utils/: converting.py  utils.py  vocabulary.py
langParser/: example.py
langParser/CodeAnalysis/: __init__.py  analyzer.py
notebooks/: tutorials.ipynb
output_smoke/logs/: events.out.tfevents.1772264329.JLLCYLenovo.16681.0  events.out.tfevents.1772264362.JLLCYLenovo.17208.0  events.out.tfevents.1772264387.JLLCYLenovo.17672.0
scripts/: auto_update_and_dynamic_ratio.py  backend_server.py  check_backend.py  config_templates.py  create_explain_config.py  data_collection_api.py  data_collector.py  dataset_optimization_api.py  dataset_optimization_server.py  debug_optimization.py  debug_optimization_simple.py  demo.py  diagnose_issue.py  quick_test.py  resource_updater.py  run_checks.sh  split_dataset.py  start_backend.py  start_services.py  trans_pyg_data.py
scripts/Normalization/: Normalization.py
scripts/coca/: convert_dataset.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_explain.py
tests/fixtures/: vddata_sample.gadgets
tests/test_datacollection/: __init__.py  test_data_collector.py  test_import.py
tests/test_framework/: __init__.py  test_ast_graphs.py  test_coca_integration.py  test_common.py  test_dataset.py  test_dataset_dataloader.py  test_errors.py  test_extractors.py  test_llvm_graphs.py  test_llvm_seq.py  test_losses.py  test_metrics.py  test_model.py  test_models_extra.py  test_optimizers.py  test_preprocess.py  test_pretrained.py  test_representations_vectorizer.py  test_schedulers.py  test_syntax_seq.py  test_utils.py  test_utils_clean_gadget.py  test_utils_converting.py  test_utils_ddp.py  test_utils_training.py  test_utils_vocabulary.py
tests/test_lang/: __init__.py  test_analyzer.py
tests/test_services/: __init__.py  test_apis.py  test_backend.py
tests/test_smoke/: test_imports.py
tools/: benchmark.py  export.py  train.py  val.py
(+339 files in other folders)
